tests/cases/standard-library/errors/std-string-handle-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(16);
  let raw = std::string::with_capacity(ref mut zone, 3);

  zone::reset(ref mut zone);
  return raw.len;
}
